# ableton-live-git-hooks

./: .env.default  .gitignore  .mise.toml  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: AGENTS.md  conventional-commits.mdc  journal-update.mdc  logseq-docs-location.mdc  project-overview.mdc
.repomix/: bundles.json
ableton-live-git-hooks-docs/: .gitignore  AGENTS.md
ableton-live-git-hooks-docs/journals/: 2025_05_18.md  2025_05_19.md  2025_05_20.md
ableton-live-git-hooks-docs/pages/: Ableton___Live___Git.md  About.md  Dev.md  Dev___Commit_Messages.md  Dev___Commit___Message___Standard.md  Dev___Formatting.md  Dev___Testing.md  Installation.md  PROJECT_ROOT.md  Project___25___05___Initial Product.md  Project___Brief.md  Project___Brief___CLI UX Briefing.md  Project___Requirements___Document.md  Python___Library___uv.md  Response___My.md  git___commit.md  git___hook.md  mise.md  mise___Config___mise.toml.md  mise___How To___Install Mise___Shell Completions in Zsh.md  mise___How To___Install Mise___The First Time.md  mise___Task.md
ableton_live_git_hooks/: cli.py  constants.py
ableton_live_git_hooks/als_git/: converter.py  finders.py  sync.py
ableton_live_git_hooks/githooks/: install_hooks.py  post_checkout.py  pre_commit.py
scripts/: generate_markdown_commit_link.zsh
tests/integration/: conftest.py
tests/integration/fixtures/: __init__.py
tests/unit/: conftest.py
tests/unit/als_git/: test_converter.py
