[project]
name = "ableton-live-git-hooks"
version = "0.1.0"
description = "Hooks for storing Ableton Live .als and .alc files in git"
readme = "README.md"
requires-python = ">=3.13,<4.0"
authors = [
    { name = "codekiln", email = "codekiln@pm.me" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5"
]

[project.scripts]
alhook = "ableton_live_git_hooks.cli:main"
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"